fix rest name center-alignment

--- a/DinnerClub/style/style.css
+++ b/DinnerClub/style/style.css
@@ -432,7 +432,7 @@ html[dir=rtl] .answers li {
 }
 
 #restNameWrapper {
-    min-width: 270px;
+    min-width: 600px;
     margin-bottom: 15px;
     padding: 0 3px;
 }
@@ -937,6 +937,8 @@ html[dir=rtl] #copyright, html[dir=rtl] #fbLikeWrapper {
     }
 
     #restNameWrapper {
+        width: 300px;
+        text-align: center;
         height: 110px;
         line-height: 49px;
         margin-bottom: 27px;
